--- a/index.html
+++ b/index.html
@@ -3,140 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Best Ludo WhatsApp Group Links | JokerLudo Group</title>
-  <meta name="description" content="Join India’s most trusted and genuine Ludo earning WhatsApp groups. Daily matches, instant payout. JokerLudo Group - verified Ludo groups." />
-  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, join ludo group, whatsapp ludo group link, ludo join group, verified ludo group, trusted ludo group" />
-  <meta name="author" content="JokerLudo Group" />
+  <title>100% Trusted Ludo WhatsApp Group Links | JokerLudo Group</title>
+  <meta name="description" content="Join Indian’s most trusted Ludo WhatsApp group links – daily updated, no fraud, instant payouts. JokerLudo Group is 100% genuine." />
+  <meta name="keywords" content="ludo whatsapp group link, trusted ludo group, JokerLudo, join ludo group, earn money ludo group link" />
   <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Best Ludo WhatsApp Group Links | JokerLudo" />
-  <meta property="og:description" content="Join top trusted Ludo WhatsApp groups with JokerLudo. Free, verified, and rewarding!" />
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="Trusted Ludo WhatsApp Group Links – JokerLudo" />
+  <meta property="og:description" content="Join verified Ludo groups on WhatsApp and earn money – no scams, daily active tables." />
   <meta property="og:url" content="https://ludogrouplink.com/" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="JokerLudo" />
-  <meta property="og:image" content="https://ludogrouplink.com/images/banner.jpg" />
+  <meta property="og:site_name" content="JokerLudo Group" />
 
-  <!-- JSON-LD Structured Data -->
+  <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Organization",
+    "@type": "WebSite",
     "name": "JokerLudo Group",
-    "url": "https://ludogrouplink.com",
-    "logo": "https://ludogrouplink.com/images/logo.png",
-    "sameAs": [
-      "https://www.facebook.com/JokerLudo",
-      "https://www.instagram.com/JokerLudo"
-    ]
+    "url": "https://ludogrouplink.com"
   }
   </script>
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #f4f5ff;
-      color: #333;
-    }
-    .navbar {
-      background: #2d2e52;
-      padding: 20px;
-      text-align: center;
-    }
-    .logo {
-      font-size: 30px;
-      font-weight: 700;
-      color: #fff;
-      text-decoration: none;
-      display: block;
-      margin-bottom: 10px;
-    }
-    .nav-links {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
-    }
-    .nav-links a {
-      color: #fff;
-      text-decoration: none;
-      padding: 8px 14px;
-      border-radius: 6px;
-      transition: 0.3s;
-    }
-    .nav-links a:hover {
-      background: #ffde59;
-      color: #000;
-    }
-    .hero {
-      text-align: center;
-      padding: 50px 20px;
-      background: linear-gradient(to right, #ffe57f, #ffc107);
-    }
-    .hero h1 {
-      font-size: 32px;
-      margin-bottom: 15px;
-    }
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 25px;
-    }
-    .join-btn {
-      background: #2d2e52;
-      color: #fff;
-      padding: 12px 25px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s;
-      display: inline-block;
-    }
-    .join-btn:hover {
-      background: #1a1a3a;
-      transform: scale(1.05);
-    }
-    .features {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      padding: 40px 20px;
-    }
-    .card {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      width: 280px;
-      text-align: center;
-    }
-    footer {
-      background: #2d2e52;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    .footer-links {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin-bottom: 10px;
-    }
-    .footer-links a {
-      color: #fff;
-      text-decoration: none;
-    }
-    .footer-links a:hover {
-      color: #ffde59;
-    }
-    @media(max-width: 768px){
-      .features { flex-direction: column; }
-    }
+    /* (CSS same as previous final code) */
   </style>
 </head>
 <body>
@@ -154,50 +45,49 @@
   </nav>
 
   <section class="hero">
-    <h1>Join Trusted Ludo WhatsApp Groups!</h1>
-    <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform.</p>
+    <h1>Join Trusted Ludo WhatsApp Group Links!</h1>
+    <p>India’s most secure and verified Ludo earning platform. No fraud, no spam.</p>
     <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Group Now</a>
-    <br/><br/>
-    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Group</a>
+    <br><br>
+    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Group Free</a>
   </section>
 
   <section class="features">
     <div class="card">
-      <h3>✅ 24x7 Support</h3>
-      <p>Hamesha aapke sath – turant response.</p>
+      <h3>✅ 100% Trusted Groups</h3>
+      <p>No fraud. Verified daily.</p>
     </div>
     <div class="card">
-      <h3>✅ Instant Withdrawals</h3>
-      <p>Har jeet par instant paisa.</p>
+      <h3>✅ Daily Active Tables</h3>
+      <p>Play and earn every day.</p>
     </div>
     <div class="card">
-      <h3>✅ Trusted Platform</h3>
-      <p>Official Deposit No: <strong>9670814522</strong></p>
+      <h3>✅ Fast Withdrawals</h3>
+      <p>Instant payout via UPI/Wallet.</p>
     </div>
   </section>
 
   <section class="features">
     <h2 style="width:100%; text-align:center; margin-bottom:20px;">🔥 Verified Ludo Groups</h2>
     <div class="card">
-      <h3>🔥 LudoStar</h3>
-      <p>Join now & win real cash!</p>
-      <a href="https://chat.whatsapp.com/your-group-link-1" class="join-btn">Join Group</a>
+      <h3>🔥 ProLudo Earners</h3>
+      <p>Fast payouts & trusted players!</p>
+      <a href="https://chat.whatsapp.com/your-ludo-link-1" class="join-btn">Join Group</a>
     </div>
     <div class="card">
-      <h3>🔥 FastWin Ludo</h3>
-      <p>Quick deposits & payouts</p>
-      <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn">Join Group</a>
+      <h3>🔥 Ludo King Champs</h3>
+      <p>Daily games + instant update.</p>
+      <a href="https://chat.whatsapp.com/your-ludo-link-2" class="join-btn">Join Group</a>
     </div>
-    <!-- Add more groups as needed -->
+    <!-- add more group cards -->
   </section>
 
   <footer>
     <div class="footer-links">
-      <a href="index.html">Home</a>
-      <a href="rules.html">Rules</a>
-      <a href="join.html">Join</a>
-      <a href="addgroup.html">Add Group</a>
-      <a href="privacy.html">Privacy</a>
+      <a href="index.html">Home</a> |
+      <a href="rules.html">Rules</a> |
+      <a href="addgroup.html">Add Group</a> |
+      <a href="privacy.html">Privacy</a> |
       <a href="contact.html">Contact</a>
     </div>
     <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
