--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="rules.html">Rules</a>
-      <a href="join.html">Join</a>
+      <a href="join.html">Join Group</a>
       <a href="addgroup.html">Add Group</a>
       <a href="contact.html">Contact</a>
       <a href="privacy.html">Privacy</a>
@@ -156,9 +156,9 @@
   <section class="hero">
     <h1>Join Trusted Ludo WhatsApp Groups!</h1>
     <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform.</p>
-    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Group Now</a>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
     <br/><br/>
-    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Group</a>
+    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
   </section>
 
   <section class="features">
