--- a/ludo-whatsapp-group-link.html
+++ b/ludo-whatsapp-group-link.html
@@ -6,58 +6,26 @@
   <title>Join Best Ludo WhatsApp Group Links | JokerLudo</title>
   <meta name="description" content="Join top 100+ Ludo WhatsApp group links on JokerLudo. Earn real money, play Ludo online, verified and trusted earning groups in India for daily matches." />
   <meta name="keywords" content="
-    ludo whatsapp group link,
-    jokerludo whatsapp group,
-    ludo earning group link,
-    join ludo group whatsapp,
-    whatsapp ludo game group,
-    money earning ludo group,
-    real cash ludo whatsapp group,
-    trusted ludo whatsapp link,
-    genuine ludo group join,
-    earn money from ludo,
-    ludo game whatsapp link,
-    joker ludo earning link,
-    online ludo whatsapp group,
-    best ludo groups for money,
-    free ludo game whatsapp link,
-    whatsapp ludo match group,
-    real money whatsapp ludo link,
-    jokerludo pro group link,
-    daily earning ludo group,
-    ludo tournament whatsapp group,
-    whatsapp ludo king group,
-    instant payout ludo whatsapp group,
-    india ludo earning group,
-    verified ludo groups,
-    ludo cash game whatsapp group,
-    earn money whatsapp group link,
-    ludo group whatsapp active,
-    play ludo and earn,
-    ludo app whatsapp group link,
-    joker ludo whatsapp game group,
-    ludo link join whatsapp,
-    ludo whatsapp ka group,
-    join now ludo group,
-    ludo money group link,
-    whatsapp ludo player group,
-    2025 ludo group links,
-    ludo competition whatsapp group,
-    joker ludo app group,
-    real ludo winner whatsapp group,
-    ludo pe paisa kamane wala group,
-    jokerludo cash group,
-    whatsapp ludo challenge group,
-    whatsapp ludo room join,
-    top ludo whatsapp groups 2025,
-    joker ludo join group,
-    ludo link for whatsapp join,
-    earning ludo group link join now
+    ludo whatsapp group link, jokerludo whatsapp group, ludo earning group link,
+    join ludo group whatsapp, whatsapp ludo game group, money earning ludo group,
+    real cash ludo whatsapp group, trusted ludo whatsapp link, genuine ludo group join,
+    earn money from ludo, ludo game whatsapp link, joker ludo earning link,
+    online ludo whatsapp group, best ludo groups for money, free ludo game whatsapp link,
+    whatsapp ludo match group, real money whatsapp ludo link, jokerludo pro group link,
+    daily earning ludo group, ludo tournament whatsapp group, whatsapp ludo king group,
+    instant payout ludo whatsapp group, india ludo earning group, verified ludo groups,
+    ludo cash game whatsapp group, earn money whatsapp group link, ludo group whatsapp active,
+    play ludo and earn, ludo app whatsapp group link, joker ludo whatsapp game group,
+    ludo link join whatsapp, ludo whatsapp ka group, join now ludo group,
+    ludo money group link, whatsapp ludo player group, 2025 ludo group links,
+    ludo competition whatsapp group, joker ludo app group, real ludo winner whatsapp group,
+    ludo pe paisa kamane wala group, jokerludo cash group, whatsapp ludo challenge group,
+    whatsapp ludo room join, top ludo whatsapp groups 2025, joker ludo join group,
+    ludo link for whatsapp join, earning ludo group link join now
   " />
   <meta name="robots" content="index, follow" />
-  <meta name="author" content="JokerLudo" />
+  <meta name="author" content="JokerLudo Group" />
 
-  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Join Best Ludo WhatsApp Group Links | JokerLudo" />
   <meta property="og:description" content="Join JokerLudo verified WhatsApp Ludo groups and start playing to earn money. Instant payouts, trusted members, 24x7 support!" />
   <meta property="og:url" content="https://ludogrouplink.com/ludo-whatsapp-group-link.html" />
@@ -65,7 +33,6 @@
   <meta property="og:site_name" content="JokerLudo" />
   <meta property="og:image" content="https://ludogrouplink.com/images/banner.jpg" />
 
-  <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -130,6 +97,13 @@
     .join-btn:hover {
       background: #1a1a3a;
     }
+    ul {
+      padding-left: 20px;
+      margin-top: 15px;
+    }
+    li {
+      margin-bottom: 8px;
+    }
     footer {
       background: #2d2e52;
       color: #fff;
@@ -161,36 +135,36 @@
 
   <div class="container">
     <h2>🎯 JokerLudo Earning WhatsApp Group Links</h2>
-    <p>Welcome to India’s most trusted Ludo platform. Below are **real money Ludo WhatsApp groups** where you can <strong>play games, win cash, and withdraw instantly</strong>. JokerLudo groups are <strong>genuine, verified, and active</strong>.</p>
+    <p>Welcome to India’s most trusted Ludo platform. Below are <strong>real money Ludo WhatsApp groups</strong> by <strong>JokerLudo Group</strong> where you can <strong>play games, win cash, and withdraw instantly</strong>. All groups are <strong>genuine, verified, and active</strong>.</p>
 
     <div class="group-card">
       <h3>🏆 JokerLudo Pro Group</h3>
-      <p>Daily matches, instant payout. <strong>Join now & earn real money</strong> by playing Ludo with trusted members.</p>
+      <p>Daily matches, instant payout. Join now & earn real money with JokerLudo Group's verified players.</p>
       <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
     </div>
 
     <div class="group-card">
       <h3>🔥 Money King Ludo Room</h3>
-      <p>Exclusive for verified players. Safe and genuine WhatsApp Ludo earning group.</p>
+      <p>Exclusive for verified players. Safe and genuine JokerLudo WhatsApp Ludo earning group.</p>
       <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn">Join Group</a>
     </div>
 
     <div class="group-card">
       <h3>💰 Real Cash Ludo Group</h3>
-      <p>Play Ludo for money. Withdraw instantly via UPI – Paytm, GPay, PhonePe supported.</p>
+      <p>Play and win cash daily. Withdraw instantly via Paytm, GPay, or PhonePe with JokerLudo support.</p>
       <a href="https://chat.whatsapp.com/your-group-link-3" class="join-btn">Join Group</a>
     </div>
 
     <h2 style="margin-top: 40px;">✅ Why Join JokerLudo WhatsApp Groups?</h2>
     <ul>
-      <li>✔️ 100% Verified & Active Groups</li>
+      <li>✔️ 100% Verified & Active Groups by JokerLudo Group</li>
       <li>✔️ Instant Withdrawals via UPI</li>
       <li>✔️ 24x7 Support from Admin</li>
       <li>✔️ No Scams – Only Genuine Players</li>
       <li>✔️ Real Money, Daily Earning Opportunities</li>
     </ul>
 
-    <p style="margin-top:20px;"><strong>Join today</strong> and become a part of the most trusted Ludo earning community in India — <strong>JokerLudo!</strong></p>
+    <p style="margin-top:20px;"><strong>Join today</strong> and become a part of the most trusted Ludo earning community in India — <strong>JokerLudo Group</strong>!</p>
   </div>
 
   <footer>
