--- a/ludo-whatsapp-group-link.html
+++ b/ludo-whatsapp-group-link.html
@@ -62,6 +62,20 @@
     header h1 {
       font-size: 26px;
     }
+    nav {
+      background: #191a32;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: 500;
+    }
+    nav a:hover {
+      color: #ffde59;
+    }
     .container {
       padding: 30px 20px;
       max-width: 900px;
@@ -133,6 +147,14 @@
     <p><strong>Earn money from Ludo</strong> – Join trusted JokerLudo WhatsApp groups and become a Ludo King 👑</p>
   </header>
 
+  <nav>
+    <a href="index.html">🏠 Home</a>
+    <a href="ludo-whatsapp-group-link.html">Ludo Groups</a>
+    <a href="join.html">Join</a>
+    <a href="rules.html">Rules</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
   <div class="container">
     <h2>🎯 JokerLudo Earning WhatsApp Group Links</h2>
     <p>Welcome to India’s most trusted Ludo platform. Below are <strong>real money Ludo WhatsApp groups</strong> by <strong>JokerLudo Group</strong> where you can <strong>play games, win cash, and withdraw instantly</strong>. All groups are <strong>genuine, verified, and active</strong>.</p>
@@ -140,19 +162,19 @@
     <div class="group-card">
       <h3>🏆 JokerLudo Pro Group</h3>
       <p>Daily matches, instant payout. Join now & earn real money with JokerLudo Group's verified players.</p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn" target="_blank">Join Now</a>
     </div>
 
     <div class="group-card">
       <h3>🔥 Money King Ludo Room</h3>
       <p>Exclusive for verified players. Safe and genuine JokerLudo WhatsApp Ludo earning group.</p>
-      <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn">Join Group</a>
+      <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn" target="_blank">Join Group</a>
     </div>
 
     <div class="group-card">
       <h3>💰 Real Cash Ludo Group</h3>
       <p>Play and win cash daily. Withdraw instantly via Paytm, GPay, or PhonePe with JokerLudo support.</p>
-      <a href="https://chat.whatsapp.com/your-group-link-3" class="join-btn">Join Group</a>
+      <a href="https://chat.whatsapp.com/your-group-link-3" class="join-btn" target="_blank">Join Group</a>
     </div>
 
     <h2 style="margin-top: 40px;">✅ Why Join JokerLudo WhatsApp Groups?</h2>
