--- a/ludo-king-whatsapp-group-links.html
+++ b/ludo-king-whatsapp-group-links.html
@@ -3,107 +3,118 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ludo King WhatsApp Group Links | Join Trusted Gaming Groups</title>
-  <meta name="description" content="Join active and trusted Ludo King WhatsApp group links to play games, participate in tournaments, and connect with other players online." />
-  <meta name="keywords" content="Ludo King WhatsApp Group Links, Ludo Groups, Ludo King Online, Join Ludo Group, WhatsApp Gaming Groups, Real Money Ludo, Joker Ludo, Ludo Tournament Groups" />
-  <link rel="stylesheet" href="style.css" />
+  <meta name="description" content="Join active Ludo King WhatsApp Groups including Joker Ludo Group. Find new players, tournaments, and fun Ludo communities." />
+  <meta name="keywords" content="Ludo King WhatsApp Group Links, Joker Ludo Group, Ludo Tournament, Ludo WhatsApp Group, Join Ludo King" />
+  <title>Ludo King WhatsApp Group Links - Joker Ludo</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #fefefe;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header, footer {
+      background: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 1em 0;
+    }
+    nav a {
+      margin: 0 10px;
+      color: white;
+      text-decoration: none;
+    }
+    main {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    .group-link {
+      background: #ecf0f1;
+      margin: 10px 0;
+      padding: 10px;
+      border-left: 5px solid #3498db;
+    }
+    .join-btn {
+      display: inline-block;
+      background: #27ae60;
+      color: white;
+      padding: 10px 20px;
+      margin: 15px 0;
+      text-decoration: none;
+      font-size: 18px;
+      border-radius: 5px;
+      transition: background 0.3s;
+    }
+    .join-btn:hover {
+      background: #219150;
+    }
+  </style>
 </head>
+
 <body>
+
   <header>
-    <nav class="navbar">
-      <div class="container">
-        <a href="index.html" class="logo">WhatsApp Group Links</a>
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">New Groups</a></li>
-          <li><a href="#">Jobs Groups</a></li>
-          <li><a href="#">Educational Groups</a></li>
-          <li><a href="#">Entertainment Groups</a></li>
-          <li><a href="#">City Groups</a></li>
-        </ul>
-      </div>
+    <h1>Ludo King WhatsApp Group Links</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="#">New Groups</a>
+      <a href="#">Jobs</a>
+      <a href="#">Education</a>
+      <a href="#">Gaming</a>
     </nav>
   </header>
 
-  <main class="container">
-    <h1>Ludo King WhatsApp Group Links</h1>
-    <p><strong>By Zubair Rabbani | May 8, 2025</strong></p>
-    <p>Ludo King is one of the most popular mobile games that has captured the hearts of millions worldwide. This engaging and entertaining board game allows friends, families, and even strangers to connect and enjoy a fun-filled gaming experience.</p>
-    <p>With the advent of WhatsApp groups, Ludo King players now have the opportunity to join dedicated communities where they can find new friends, improve their skills, and participate in exciting matches.</p>
+  <main>
+
+    <!-- Top Join Button -->
+    <div style="text-align: center;">
+      <a class="join-btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" target="_blank">🔥 Join Joker Ludo Group Now 🔥</a>
+    </div>
 
     <h2>Active Ludo King WhatsApp Group Links</h2>
+
+    <div class="group-link">LUDO KING – <a class="join-btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c">Join</a></div>
+    <div class="group-link">LUDO KINGDOM – <a class="join-btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c">Join</a></div>
+    <div class="group-link">TERRABET Ludo – <a class="join-btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c">Join</a></div>
+    <div class="group-link">Game Maker’s Ludo group – <a class="join-btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c">Join</a></div>
+    <div class="group-link">Royal LUDO GROUP – <a class="join-btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c">Join</a></div>
+
+    <!-- Mid Join Button -->
+    <div style="text-align: center;">
+      <a class="join-btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" target="_blank">🎮 Join Joker Ludo Game Group 🎮</a>
+    </div>
+
+    <h2>How to Join?</h2>
     <ul>
-      <li><a href="#">LUDO KING – Join</a></li>
-      <li><a href="#">LUDO KINGDOM – Join</a></li>
-      <li><a href="#">TERRABET Ludo – Join</a></li>
-      <li><a href="#">Game Maker’s Ludo group – Join</a></li>
-      <li><a href="#">Royal LUDO GROUP – Join</a></li>
-      <li><a href="#">LUDO TOURNAMENTS – Join</a></li>
-      <li><a href="#">Ludo 24 Hours Trusted – Join</a></li>
-      <li><a href="#">JMD LUDO CLUB – Join</a></li>
+      <li>Click on any <strong>Join</strong> button.</li>
+      <li>You'll be redirected to WhatsApp group invite.</li>
+      <li>Tap “Join Group” and start playing!</li>
     </ul>
 
-    <h2>Online Ludo King WhatsApp Group Links</h2>
+    <h2>Group Rules:</h2>
     <ul>
-      <li><a href="#">Fun time ludo – Join</a></li>
-      <li><a href="#">LUDO Badshaha – Join</a></li>
-      <li><a href="#">HARYANA LUDO GROUP – Join</a></li>
-      <li><a href="#">LUDO KING OFFICIAL – Join</a></li>
-      <li><a href="#">Max Ludo King – Join</a></li>
-      <li><a href="#">K D LUDO GROUP – Join</a></li>
-      <li><a href="#">GANDHI LUDO KING – Join</a></li>
+      <li>No spam or self-promotion.</li>
+      <li>Respect all players.</li>
+      <li>Only Ludo-related content.</li>
+      <li>Fair gameplay – no cheating!</li>
     </ul>
 
-    <h2>How to Join Ludo King WhatsApp Groups?</h2>
-    <ol>
-      <li>Find a Group Link: Look for active Ludo King WhatsApp group links online or in gaming forums.</li>
-      <li>Click the Link: Once you find a group link, click on it. This will redirect you to WhatsApp.</li>
-      <li>Join the Group: Click on the “Join Group” button to become a member of the group.</li>
-      <li>Start Engaging: Introduce yourself and start participating in discussions, games, and tournaments.</li>
-    </ol>
+    <!-- Bottom Join Button -->
+    <div style="text-align: center;">
+      <a class="join-btn" href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" target="_blank">✅ Join Joker Ludo Group Now ✅</a>
+    </div>
 
-    <h2>Rules for Ludo King WhatsApp Groups</h2>
-    <ul>
-      <li>Respect All Members</li>
-      <li>No Spamming</li>
-      <li>Stay On Topic</li>
-      <li>Follow Group Admins’ Instructions</li>
-      <li>Avoid Cheating</li>
-      <li>Mind Age Restrictions</li>
-    </ul>
-
-    <h2>Pros and Cons of Ludo King WhatsApp Groups</h2>
-    <p><strong>Pros:</strong></p>
-    <ul>
-      <li>Community Building</li>
-      <li>Skill Development</li>
-      <li>Friendly Competitions</li>
-      <li>Convenient Communication</li>
-    </ul>
-
-    <p><strong>Cons:</strong></p>
-    <ul>
-      <li>Privacy Concerns</li>
-      <li>Distractions</li>
-      <li>Risk of Spam</li>
-      <li>Limited Moderation</li>
-    </ul>
-
-    <h2>Conclusion</h2>
-    <p>Ludo King WhatsApp groups are a fantastic way for fans of the game to connect, compete, and enhance their gaming experience. These groups foster a sense of community while providing a platform for players to share strategies and participate in friendly matches.</p>
-    <p>However, it’s important to follow the rules and remain cautious about privacy and group activity. By joining the right group, you can unlock a world of fun and engaging Ludo King adventures.</p>
   </main>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 ludogrouplink.com | All Rights Reserved</p>
-      <p><small>This website is not affiliated with WhatsApp. All groups are owned by respective admins.</small></p>
-      <nav>
-        <a href="index.html">Home</a> |
-        <a href="privacy.html">Privacy</a> |
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
+  <footer>
+    <p>&copy; 2025 Ludogrouplink.com | All rights reserved.</p>
+    <p>This site is not affiliated with WhatsApp or Ludo King. Use at your own risk.</p>
   </footer>
+
 </body>
 </html>
