--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Best Ludo WhatsApp Group Links | JokerLudo Group</title>
-  <meta name="description" content="Join India’s most trusted and genuine Ludo earning WhatsApp groups. Daily matches, instant payout. JokerLudo Group - verified Ludo groups." />
-  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, join ludo group, whatsapp ludo group link, ludo join group, verified ludo group, trusted ludo group" />
+  <meta name="description" content="Join India’s most trusted and genuine Ludo earning WhatsApp groups. Daily matches, instant payout. JokerLudo Group - verified Ludo groups, Ludo King WhatsApp groups and free Ludo group links." />
+  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, join ludo group, whatsapp ludo group link, ludo join group, verified ludo group, trusted ludo group, ludo king whatsapp group, ludo earning whatsapp group, free ludo group link, online ludo players group" />
   <meta name="author" content="JokerLudo Group" />
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Best Ludo WhatsApp Group Links | JokerLudo" />
-  <meta property="og:description" content="Join top trusted Ludo WhatsApp groups with JokerLudo. Free, verified, and rewarding!" />
+  <meta property="og:description" content="Join top trusted Ludo WhatsApp groups with JokerLudo. Free, verified, and rewarding! Ludo King group, earning groups, and daily updates." />
   <meta property="og:url" content="https://ludogrouplink.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="JokerLudo" />
@@ -84,6 +84,10 @@
     .hero p {
       font-size: 18px;
       margin-bottom: 25px;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.5;
     }
     .join-btn {
       background: #2d2e52;
@@ -137,6 +141,16 @@
     @media(max-width: 768px){
       .features { flex-direction: column; }
     }
+    /* Additional SEO text style */
+    .seo-text {
+      max-width: 800px;
+      margin: 20px auto 40px auto;
+      padding: 0 20px;
+      color: #555;
+      font-size: 16px;
+      line-height: 1.6;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -155,13 +169,17 @@
 
   <section class="hero">
     <h1>Join Trusted Ludo WhatsApp Groups!</h1>
-    <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform.</p>
-    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
+    <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform with free and verified WhatsApp groups, Ludo King tournaments, and instant payouts.</p>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn" aria-label="Join Joker Ludo WhatsApp Group Now">Join Joker Group Now</a>
     <br/><br/>
     <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
   </section>
 
-  <section class="features">
+  <section class="seo-text" aria-label="Information about Ludo WhatsApp Groups">
+    <p>Explore the best and verified <strong>Ludo WhatsApp group links</strong> to join active communities of Ludo players. Whether you want to join <strong>trusted Ludo King WhatsApp groups</strong>, <strong>earning Ludo groups</strong>, or <strong>online Ludo players groups</strong>, JokerLudo provides daily updated and spam-free group links. Join now and start playing to win real cash rewards instantly!</p>
+  </section>
+
+  <section class="features" aria-label="Platform Features">
     <div class="card">
       <h3>✅ 24x7 Support</h3>
       <p>Hamesha aapke sath – turant response.</p>
@@ -176,23 +194,23 @@
     </div>
   </section>
 
-  <section class="features">
+  <section class="features" aria-label="Verified Ludo WhatsApp Groups">
     <h2 style="width:100%; text-align:center; margin-bottom:20px;">🔥 Verified Ludo Groups</h2>
     <div class="card">
       <h3>🔥 LudoStar</h3>
-      <p>Join now & win real cash!</p>
-      <a href="https://chat.whatsapp.com/your-group-link-1" class="join-btn">Join Group</a>
+      <p>Join now & win real cash in Ludo King tournaments!</p>
+      <a href="https://chat.whatsapp.com/your-group-link-1" class="join-btn" aria-label="Join LudoStar WhatsApp Group">Join Group</a>
     </div>
     <div class="card">
       <h3>🔥 FastWin Ludo</h3>
-      <p>Quick deposits & payouts</p>
-      <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn">Join Group</a>
+      <p>Quick deposits & payouts. Trusted WhatsApp Ludo group.</p>
+      <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn" aria-label="Join FastWin Ludo WhatsApp Group">Join Group</a>
     </div>
     <!-- Add more groups as needed -->
   </section>
 
   <footer>
-    <div class="footer-links">
+    <div class="footer-links" aria-label="Footer navigation links">
       <a href="index.html">Home</a>
       <a href="rules.html">Rules</a>
       <a href="join.html">Join</a>
