--- a/girls-ludo-group-links.html
+++ b/girls-ludo-group-links.html
@@ -81,6 +81,8 @@
 </header>
 
 <div class="container">
+      <a href="index.html" class="logo">🎲 JokerLudo Group</a>
+    <div class="nav-links">
   <h1>Girls Ludo WhatsApp Group Links (Updated)</h1>
   <p>Looking to join fun and active Girls Ludo WhatsApp Groups? Here's a handpicked list of updated links where female Ludo players play, chat, and have fun together! 🎮💃</p>
 
